# VAL_toolkit

./: .gitignore  COMMANDS.md  LICENSE  README.md  data_availability.md  environment.yml  pyproject.toml  requirements.txt
configs/: acs_figures.example.yaml  acs_pipeline.example.yaml  annotation_backends.example.yaml  annotation_benchmark.example.yaml  auc_barplot.example.yaml  celltypist_annotations.example.yaml  val_ranked_bin_panels.example.yaml
docs/: acs_algorithm.md  acs_config_schema.md  acs_pipeline.md  annotation_backends.md  celltypist_backend.md  scimilarity_backend.md  singler_backend.md
example_data/: annotation_predictions_example.csv  auc_barplot_input_example.csv
scripts/: create_example_h5ad.py  run_acs_figures.py  run_acs_pipeline.py  run_annotation_backends.py  run_annotation_benchmark.py  run_auc_barplot.py  run_celltypist_annotations.py  run_singler_backend.R  run_val_ranked_bin_panels.py
src/val_toolkit/: __init__.py  acs.py  annotation_backends.py  annotation_harmonization.py  annotation_metrics.py  config.py  labels.py  plotting.py  val_panels.py  validation.py
tests/: conftest.py  test_acs.py  test_acs_pipeline.py  test_annotation_backends.py  test_annotation_metrics.py  test_val_panels.py
