[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "val-single-cell-toolkit"
version = "0.1.0"
description = "Configurable code for VAL single-cell annotation benchmark and response-signature validation plots."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Shai Dulberg"}
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "PyYAML>=6.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
